Minor modification of the translations.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,9 +4,9 @@ en:
   alert_countdown_completed: "Alert completed about %{countdown} ago"
   label_alerts_count: "Alerts (%{count})"
   button_add_relative: "Add(relative)"
-  button_add_absolute: "Add(Absolute)"
+  button_add_absolute: "Add(absolute)"
   label_alert_watchers: "Alert watchers"
-  label_alert_members: "Alert members"
+  label_alert_members: "Alert project members"
   setting_hide_completed_alerts: "Hide completed alerts"
   label_alerts: "Alerts"
   label_my_alerts: "My alerts"
